commit all changes

--- a/About.html
+++ b/About.html
@@ -62,18 +62,20 @@
         <section id="about-intro" class="clear">
           <div class="three_fifth first"><img class="imgholder" src="images/demo/548x430.gif" alt=""></div>
           <div class="two_fifth">
-            <h2>Vivamuslibero Auguer</h2>
-            <p>Lorem ipsum dolor sit amet, consectetaur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <p>Laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <h2>Vivamuslibero Auguer</h2>
+            <h2>Who Are We?</h2>
+            <p>
+              Smart grocery is a family-run business that has been in the  industry for several years. It started out as a small family grocer around 1 year ago, and today, it is a second-generation family company, operating state-of-the-art supermarkets
+              The Smart grocery offers the complete shopping experience, including a lush plant section, an abundant fruit and veg section, an aromatic pizza and bakery counter, a high-quality delicatessen counter, a well-stocked butcher counter, a gourmet fish and sushi counter, a charming health section supplied with organic products, as well as a large wine cellar. Also, at Greens Supermarket, shoppers can find pre-packaged, ready-to-eat meals, products for pets, in addition to household essentials.
+              .</p>
+            <p>We work with a variety of local as well as international suppliers and aim to introduce new products to the local market at the best possible prices, making them accessible to all the people in Malta via our online shopping platform..</p>
+            <h2>List of services</h2>
             <ul>
-              <li>Aliquam venenatis leo et orci.</li>
-              <li>Pellentesque eleifend vulputate massa.</li>
-              <li>Vivamus eleifend sollicitudin eros.</li>
-              <li>Maecenas vitae nunc.</li>
-              <li>Ut pretium odio eu nisi.</li>
-              <li>Nam condimentum mi id magna.</li>
-              <li>Pellentesque consectetuer, felis vel rhoncus.</li>
+              <li>Sales and delivery at your door.</li>
+              <li>Packaging.</li>
+              <li>Sales and delivery at your door.</li>
+              <li>Sales and delivery at your door.</li>
+              <li>Sales and delivery at your door.</li>
+              <li>Sales and delivery at your door.</li>
             </ul>
           </div>
         </section>
@@ -81,37 +83,37 @@
        
        
         <section id="team">
-          <h2>Vivamuslibero Auguer</h2>
+          <h2>Staff Members</h2>
           <ul class="clear">
             <li class="one_quarter first">
               <figure><img src="images/demo/team-member.gif" alt="">
                 <figcaption>
-                  <p class="team_name">Name Goes Here</p>
-                  <p class="team_title">Job Title Here</p>
+                  <p class="team_name">Purity Neelax</p>
+                  <p class="team_title">General Manager</p>
                 </figcaption>
               </figure>
             </li>
             <li class="one_quarter">
               <figure><img src="images/demo/team-member.gif" alt="">
                 <figcaption>
-                  <p class="team_name">Name Goes Here</p>
-                  <p class="team_title">Job Title Here</p>
+                  <p class="team_name">James Rueben</p>
+                  <p class="team_title">Delivery manager</p>
                 </figcaption>
               </figure>
             </li>
             <li class="one_quarter">
               <figure><img src="images/demo/team-member.gif" alt="">
                 <figcaption>
-                  <p class="team_name">Smart Grocery</p>
-                  <p class="team_title">We deliverb green to yoyr door step</p>
+                  <p class="team_name">speph Rocks</p>
+                  <p class="team_title">Supplier manager</p>
                 </figcaption>
               </figure>
             </li>
             <li class="one_quarter">
               <figure><img src="images/demo/team-member.gif" alt="">
                 <figcaption>
-                  <p class="team_name">Name Goes Here</p>
-                  <p class="team_title">Job Title Here</p>
+                  <p class="team_name">hellen crington</p>
+                  <p class="team_title">Customer Manager</p>
                 </figcaption>
               </figure>
             </li>
