--- a/gallery.html
+++ b/gallery.html
@@ -78,22 +78,22 @@ body {
   <div class="column Vegetables">
     <div class="content">
       <img src="images.jpg" alt="Mountains" style="width:100%">
-      <h4>fruits</h4>
-      <p>Lorem ipsum dolor..</p>
+      <h4>Quality vegetables for you at low price</h4>
+      <p>..</p>
     </div>
   </div>
   <div class="column Vegetables">
     <div class="content">
     <img src="images.jpg" alt="Lights" style="width:100%">
       <h4>greens</h4>
-      <p>Lorem ipsum dolor..</p>
+      <p>Quality vegetables for you at low price..</p>
     </div>
   </div>
   <div class="column Vegetables">
     <div class="content">
     <img src="Smart-Grocery-app-logo.jpg" alt="Vegetables" style="width:100%">
       <h4>greens</h4>
-      <p>Lorem ipsum dolor..</p>
+      <p>Quality vegetables for you at low price..</p>
     </div>
   </div>
   
@@ -101,21 +101,21 @@ body {
     <div class="content">
       <img src="Smart-Grocery-app-logo.jpg" alt="Car" style="width:100%">
       <h4>Greens</h4>
-      <p>Lorem ipsum dolor..</p>
+      <p>Quality vegetables for you at low price.</p>
     </div>
   </div>
   <div class="column Greens">
     <div class="content">
     <img src="Smart-Grocery-app-logo.jpg" alt="Greens" style="width:100%">
       <h4>Vegetables</h4>
-      <p>Lorem ipsum dolor..</p>
+      <p>Quality vegetables for you at low price..</p>
     </div>
   </div>
   <div class="column Greens">
     <div class="content">
     <img src="fruits.jpg" alt="Greens" style="width:100%">
       <h4>Greens</h4>
-      <p>Lorem ipsum dolor..</p>
+      <p>Fruits and Vegetables for you..</p>
     </div>
   </div>
 
@@ -123,14 +123,14 @@ body {
     <div class="content">
       <img src="fruits.jpg" alt="Greens" style="width:100%">
       <h4>Fruits</h4>
-      <p>Lorem ipsum dolor..</p>
+      <p>Fruits and Vegetables for you..</p>
     </div>
   </div>
   <div class="column Fruits">
     <div class="content">
     <img src="fruits.jpg" alt="Greens" style="width:100%">
       <h4>Fruits</h4>
-      <p>Lorem ipsum dolor..</p>
+      <p>Fruits and Vegetables for you..</p>
     </div>
   </div>
   <div class="column Fruits">
