--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@ background-color: #3ea394;
                <!--main  starts-->
          <main> 
           <article>
-            <h1>Main article heading</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae sunt igitur communia vobis cum antiquis, iis sic utamur quasi concessis; Nihil acciderat ei, quod nollet, nisi quod anulum, quo delectabatur, in mari abiecerat. Unum est sine dolore esse, alterum cum voluptate. Laboro autem non sine causa; Theophrasti igitur, inquit, tibi liber ille placet de beata vita? Nihil opus est exemplis hoc facere longius. Duo Reges constructio interrete. Graecum enim hunc versum nostis omnes Suavis laborum est praeteritorum memoria. Haec et tu ita posuisti, et verba vestra sunt.</p>
+            <h1>Our Story</h1>
+            <p>Smart grocery burst on the scene back in 2020 with a slogan  Quality That You Can Trust, Today the customers  most of who have turned into repeat customers with appreciation and love, publicly admire Smart Grocerys integrity and living up to its slogan.
+              Smart Grocery has brought you a wide array of products  rice of different types, handpicked foods, ingredients, spices sourced from where they are produced best, oil, ghee, pickle, and more which have grown fondness among foodies for creating exotic explosions of flavor.
+              </p>
       
-            <h2>Article secondary heading</h2>
-            <p>Nos commodius agimus. A mene tu? Tantum dico, magis fuisse vestrum agere Epicuri diem natalem, quam illius testamento cavere ut ageretur. Tenesne igitur, inquam, Hieronymus Rhodius quid dicat esse summum bonum, quo putet omnia referri oportere? Nihilo beatiorem esse Metellum quam Regulum. Sed quanta sit alias, nunc tantum possitne esse tanta. Philosophi autem in suis lectulis plerumque moriuntur. Esse enim, nisi eris, non potes.</p>
-            <p>Sunt enim quasi prima elementa naturae, quibus ubertas orationis adhiberi vix potest, nec equidem eam cogito consectari. Id Sextilius factum negabat. Quorum sine causa fieri nihil putandum est. Quae autem natura suae primae institutionis oblita est?</p>
+            <h2>Our Home Delivery Service</h2>
+            <p>Once you put an order, We deliver to you in a few.</p>
+            <h3>What Can We Do For You?</h3>
+            <p>Smart Grocery ensures the product quality in every stage starting from the production level to the final packaging. We believe in quality and you can definitely trust on us</p>
           </article>
         </main>
     </div>
